# docs/swagger.json
@@ -243,7 +243,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pacientes"
+                    "Paciente"
                 ],
                 "summary": "List patients",
                 "responses": {
@@ -267,7 +267,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pacientes"
+                    "Paciente"
                 ],
                 "summary": "Create Patient",
                 "parameters": [
@@ -305,7 +305,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pacientes"
+                    "Paciente"
                 ],
                 "summary": "Get Single Patient by id.",
                 "parameters": [
@@ -335,7 +335,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pacientes"
+                    "Paciente"
                 ],
                 "summary": "Update Patient",
                 "parameters": [
@@ -378,7 +378,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pacientes"
+                    "Paciente"
                 ],
                 "summary": "Delete Patient",
                 "parameters": [
@@ -415,7 +415,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pacientes"
+                    "Paciente"
                 ],
                 "summary": "Update Patient-DNI",
                 "parameters": [
@@ -451,6 +451,299 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/domain.Paciente"
+                        }
+                    }
+                }
+            }
+        },
+        "/turnos": {
+            "get": {
+                "description": "Get appointment list",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "List appointments",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Turno"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Post new appointment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "Create Appointment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Appointment to store",
+                        "name": "turno",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
+                        }
+                    }
+                }
+            }
+        },
+        "/turnos/paciente": {
+            "get": {
+                "description": "Get appointment list by patient DNI",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "List appointments by patient DNI",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "dni param",
+                        "name": "dni",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Turno"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/turnos/turnoauxiliar": {
+            "post": {
+                "description": "Post new appointment with dni and registration",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "Create Appointment with dni and registration",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Appointment to store",
+                        "name": "turno",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.TurnoAuxiliar"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
+                        }
+                    }
+                }
+            }
+        },
+        "/turnos/{id}": {
+            "get": {
+                "description": "Return appointment who matches idParam.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "Get Single Appointment by id.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "get appointment by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update appointment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "Update Appointment",
+                "parameters": [
+                    {
+                        "description": "Apponitment to update",
+                        "name": "turno",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "id param",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Remove Appointment data by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "Delete Appointment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id param",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.Response"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update date",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Turno"
+                ],
+                "summary": "Update Appointment-Date",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id param",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Date to patch",
+                        "name": "turno",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Turno"
                         }
                     }
                 }
@@ -506,6 +799,61 @@
                     "type": "integer"
                 },
                 "nombre": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.Turno": {
+            "type": "object",
+            "required": [
+                "descripcion",
+                "fecha_hora",
+                "odontologo",
+                "paciente"
+            ],
+            "properties": {
+                "descripcion": {
+                    "type": "string"
+                },
+                "fecha_hora": {
+                    "description": "OdontologoID int    `json:\"odontologo_id\" binding:\"required\"`",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "odontologo": {
+                    "description": "PacienteID int `json:\"paciente_id\" binding:\"required\"`",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/domain.Odontologo"
+                        }
+                    ]
+                },
+                "paciente": {
+                    "$ref": "#/definitions/domain.Paciente"
+                }
+            }
+        },
+        "domain.TurnoAuxiliar": {
+            "type": "object",
+            "required": [
+                "descripcion",
+                "fecha_hora",
+                "odontologo_mat",
+                "paciente_dni"
+            ],
+            "properties": {
+                "descripcion": {
+                    "type": "string"
+                },
+                "fecha_hora": {
+                    "type": "string"
+                },
+                "odontologo_mat": {
+                    "type": "string"
+                },
+                "paciente_dni": {
                     "type": "string"
                 }
             }
